# nostr-telegram-bridge

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.de.md  DEV.md  ERKLAERUNG.md  LICENSE  README.de.md  README.md  SERVER-UPDATE.md  SETUP.de.md  TESTING.md  start-bridge.sh  stop-bridge.sh
src/: config.rs  database.rs  main.rs
